--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -27,11 +27,11 @@
             </div>
         </div>
 
-        <nav class="nav--secondary" aria-labelledby="navigate-this-project">
+        <nav class="nav--secondary" aria-labelledby="child-pages-heading">
         {%- for projectPage in collections.projectPages %}
             {%- if projectPage.data.title === articleTitle and projectPage.children %}
             <div class="wrapper">
-                <h2 class="h3" id="navigate-this-project">Navigate this project</h2>
+                <h2 class="h3" id="child-pages-heading">Child Pages</h2>
 
                 <div class="menu--secondary">
                     <ul>
