GH-426: refactor projects and tools page

--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -16,18 +16,29 @@
                     <h2>Projects</h2>
                     <div class="projects">
                         {% for project in collections.projects %}
-                        <div class="project">
-                            <h3><a href="{{project.url}}">{{ project.data.title }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</a></h3>
-                            {{ project.data.description | markdown | safe }}
-                            {% if project.data.tags.length > 0 %}
-                            <p class="tags">
-                                {% for tag in project.data.tags %}
-                                <span class="tag">{{ tag | safe }}</span>
-                                {% endfor %}
-                            </p>
+                        <article class="project">
+                            {% if project.data.thumbnailImage %}
+                            <img class="thumbnail" src="{{ project.data.thumbnailImage }}" role="presentation" alt="" />
                             {% endif %}
-                            <p class="project__link"><a rel="external" href="{{ project.data.link }}">Visit {{ project.data.shortName if project.data.shortName else project.data.title }} website</a></p>
-                        </div>
+                            <div class="project-content">
+                                <h3>{{ project.data.title }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
+                                {% if project.data.content %}
+                                {% set fullDescription = project.data.description + " [More about " + project.data.title + "](" + project.url + ")" %}
+                                {{ fullDescription | markdown | safe }}
+                                {% else %}
+                                {{ project.data.description | markdown | safe }}
+                                {% endif %}
+                                {# {{ project.data.description | trim | markdown | safe }}{% if project.data.content %}<a class="more-about-project" href="{{project.url}}">More about {{ project.data.title | safe }}</a>{% endif %} #}
+                                <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.title }} website</a></p>
+                                {% if project.data.tags.length > 0 %}
+                                <p class="tags">
+                                    {% for tag in project.data.tags %}
+                                    <span class="tag">{{ tag | safe }}</span>
+                                    {% endfor %}
+                                </p>
+                                {% endif %}
+                            </div>
+                        </article>
                         {% endfor %}
                     </div>
                 </div>
