--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $black: #000;
 $white: #fff;
 $grey-100: #f2f2f2;
 $grey-200: #c4c4c4;
+$grey-light: #e9e9e9;
 $indigo-100: #f8fbff;
 $indigo-200: #e2edfc;
 $indigo-500: #5a67d8;
