--- a/src/assets/styles/pages/_projects-tools.scss
+++ b/src/assets/styles/pages/_projects-tools.scss
@@ -1,29 +1,59 @@
-.page--projects-and-tools .hr {
-  border-bottom-color: var(--fl-fgColor, var(--indigo-500));
+.page--projects-and-tools {
+  .hr {
+    border-bottom-color: var(--fl-fgColor, var(--indigo-500));
+  }
+
+  .tool {
+    margin-top: rem(48);
+  }
+
+  .project__link,
+  .tool__link {
+    margin-top: rem(16);
+  }
+
+  .project {
+    margin-top: rem(48);
+
+    .thumbnail {
+      height: rem(177);
+      width: rem(266);
+    }
+
+    a[href^='/projects/'] {
+      font-weight: 500;
+    }
+  }
 }
 
-.page--projects-and-tools .project,
-.page--projects-and-tools .tool {
-  margin-top: rem(48);
-}
+@include breakpoint-up(sm) {
+  .page--projects-and-tools {
+    .projects,
+    .tools {
+      display: grid;
+      grid-gap: var(--gutter);
+      grid-template-columns: repeat(2, 1fr);
+    }
 
-.page--projects-and-tools .project__link,
-.page--projects-and-tools .tool__link {
-  margin-top: rem(16);
+    .project {
+      .thumbnail {
+        height: rem(247);
+        width: rem(370);
+      }
+    }
+  }
 }
 
 @include breakpoint-up(md) {
-  .page--projects-and-tools .projects,
-  .page--projects-and-tools .tools {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: calc(-1 / 2 * var(--gutter));
-    width: calc(100% + var(--gutter));
-  }
+  .page--projects-and-tools {
+    .projects,
+    .tools {
+      grid-template-columns: repeat(3, 1fr);
+    }
 
-  .page--projects-and-tools .project,
-  .page--projects-and-tools .tool {
-    flex: 0 0 50%;
-    padding: 0 calc(var(--gutter) / 2);
+    .project,
+    .tool {
+      padding: 0 calc(var(--gutter) / 2);
+    }
   }
 }
