add object-fit css property to thumbnail images

--- a/src/assets/styles/pages/_projects-tools.scss
+++ b/src/assets/styles/pages/_projects-tools.scss
@@ -18,6 +18,7 @@
     .thumbnail {
       height: rem(177);
       width: rem(266);
+      object-fit: contain;
     }
 
     a[href^='/projects/'] {
