--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -36,6 +36,7 @@
   'pages/history',
   'pages/projects-tools',
   'pages/project',
+  'pages/resources',
   'pages/news-ideas',
   'pages/single',
   'pages/team',
