--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -1,55 +1,51 @@
 .page--resources {
-    .content.resources {
+    .content {
         flex: 0 0 90%;
     }
     .filter__container {
         display: flex;
         flex-direction: column;
         row-gap: 1rem;
+        .filter__button {
+            border-top: 2px solid currentcolor;
+        }
     }
 
-    .filter__button {
-        border-top: 2px solid currentcolor;
-    }
-
-    .resource__container {
+    .container {
         display: grid;
         column-gap: 1rem;
         margin-top: 6rem;
         margin-bottom: 1rem;
     }
 
-    .resource--card {
+    .card {
         border-top: 2px solid red;
         margin-bottom: 4rem;
-    }
-
-    .resource--card--image {
-        background-color: gray;
-        height: 7rem;
-    }
+        .card-image {
+            background-color: gray;
+            height: 7rem;
+        }
+        .card-title {
+            margin-top: 0.5rem;
+        }
     
-    .resource--card--title {
-        margin-top: 0.5rem;
-    }
-
-    .resource--card--tag--container {
-        display: flex;
-        column-gap: 1rem;
-        margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
-    }
-
-    .resource--card--tag {
-        border: 1px solid currentColor;
-        border-radius: 3rem;
-        padding: 0.5rem;
+        .card-tag__container {
+            display: flex;
+            column-gap: 1rem;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+            .card-tag {
+                border: 1px solid currentColor;
+                border-radius: 3rem;
+                padding: 0.5rem;
+            }
+        }
     }
 }
 
 @include breakpoint-up(sm) {
     .page--resources {
-        .resource__container {
+        .container {
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(4, 1fr);
         }
@@ -58,7 +54,7 @@
 
 @include breakpoint-up(md) {
     .page--resources {
-        .resource__container {
+        .container {
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(4, 1fr);
         }
