--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -1,62 +1,67 @@
 .page--resources {
-    .content {
-        flex: 0 0 90%;
+  .content {
+    flex: 0 0 90%;
+  }
+
+  .filter__container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+
+    .filter__button {
+      border-top: 2px solid currentcolor;
     }
-    .filter__container {
-        display: flex;
-        flex-direction: column;
-        row-gap: 1rem;
-        .filter__button {
-            border-top: 2px solid currentcolor;
-        }
+  }
+
+  .container {
+    column-gap: 1rem;
+    display: grid;
+    margin-bottom: 1rem;
+    margin-top: 6rem;
+  }
+
+  .card {
+    border-top: 2px solid red;
+    margin-bottom: 4rem;
+
+    .card-image {
+      background-color: gray;
+      height: 7rem;
     }
 
-    .container {
-        display: grid;
-        column-gap: 1rem;
-        margin-top: 6rem;
-        margin-bottom: 1rem;
+    .card-title {
+      margin-top: 0.5rem;
     }
 
-    .card {
-        border-top: 2px solid red;
-        margin-bottom: 4rem;
-        .card-image {
-            background-color: gray;
-            height: 7rem;
-        }
-        .card-title {
-            margin-top: 0.5rem;
-        }
-    
-        .card-tag__container {
-            display: flex;
-            column-gap: 1rem;
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
-            .card-tag {
-                border: 1px solid currentColor;
-                border-radius: 3rem;
-                padding: 0.5rem;
-            }
-        }
+    .card-tag__container {
+      column-gap: 1rem;
+      display: flex;
+      margin-bottom: 0.5rem;
+      margin-top: 0.5rem;
+
+      .card-tag {
+        border: 1px solid black;
+        border-radius: 3rem;
+        padding: 0.5rem;
+      }
     }
+  }
 }
 
 @include breakpoint-up(sm) {
-    .page--resources {
-        .container {
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(4, 1fr);
-        }
+  .page--resources {
+    .container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr);
     }
+  }
 }
 
 @include breakpoint-up(md) {
-    .page--resources {
-        .container {
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(4, 1fr);
-        }
+  .page--resources {
+    .container {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(4, 1fr);
     }
   }
+}
