--- a/src/_includes/layouts/single--resource.njk
+++ b/src/_includes/layouts/single--resource.njk
@@ -13,7 +13,7 @@
         <h3 class="card-title">
             {{ title | safe }}
         </h3>
-        <div class="card-tag__container">
+        <div class="card-tags">
             {% if topics.length > 0 %}
                 {% for topic in topics %}
                     <div class="card-tag">
