--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -3,54 +3,58 @@
     flex: 0 0 90%;
   }
 
-  .filter__container {
+  .filter {
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
+    row-gap: rem(16);
 
     .filter__button {
       border-top: 2px solid currentcolor;
     }
   }
 
-  .container {
-    column-gap: 1rem;
+  .resources-result {
+    column-gap: rem(16);
     display: grid;
-    margin-bottom: 1rem;
-    margin-top: 6rem;
+    margin-bottom: rem(16);
+    margin-top: rem(96);
   }
 
   .card {
     border-top: 2px solid red;
-    margin-bottom: 4rem;
+    margin-bottom: rem(64);
 
     .card-image {
       background-color: gray;
-      height: 7rem;
+      height: rem(102);
     }
 
     .card-title {
-      margin-top: 0.5rem;
+      margin-top: rem(8);
     }
 
-    .card-tag__container {
-      column-gap: 1rem;
+    .card-tags {
+      column-gap: rem(16);
       display: flex;
-      margin-bottom: 0.5rem;
-      margin-top: 0.5rem;
+      margin-bottom: rem(8);
+      margin-top: rem(8);
 
       .card-tag {
         border: 1px solid black;
         border-radius: 3rem;
-        padding: 0.5rem;
+        padding: rem(8);
       }
+    }
+
+    .card-link {
+      margin-top: rem(16);
     }
   }
 }
 
 @include breakpoint-up(sm) {
   .page--resources {
-    .container {
+    .resources-result {
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(4, 1fr);
     }
@@ -59,7 +63,7 @@
 
 @include breakpoint-up(md) {
   .page--resources {
-    .container {
+    .resources-result {
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(4, 1fr);
     }
