GH-454: Projects and Tools page is now only used for projects

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -34,7 +34,7 @@
   'pages/generic',
   'pages/home',
   'pages/history',
-  'pages/projects-tools',
+  'pages/projects',
   'pages/project',
   'pages/resources',
   'pages/news-ideas',
