--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -43,8 +43,7 @@ main h1,
 main h2,
 main h3,
 main h4,
-.project__link,
-.tool__link {
+.project__link {
   a:not([rel='external'])::after {
     background: currentcolor;
     content: '';
