GH-454: add checkbox style for the resources page

--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -24,8 +24,8 @@
 
         <div class="content">
             <div class="filter">
-                <div class="filter__button">filter</div>
-                <div class="filter__button">filter</div>
+                <div class="filter-section">filter</div>
+                <div class="filter-section">filter</div>
             </div>
             <div class="resources-result">
                 {% for i in range(0, 30) %}
