--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -38,16 +38,15 @@
       opacity: 0; // hide it
       position: absolute; // take it out of document flow
 
-      & + label,
-      & + span {
+      & + label {
         cursor: pointer;
         padding: 0;
         position: relative;
       }
 
       // Box
-      & + label::before,
-      & + span::before {
+      & + label::before {
+        border-radius: rem(3);
         content: '';
         display: inline-block;
         height: rem(20);
@@ -58,8 +57,7 @@
       }
 
       // Checkmark
-      &:checked + label::after,
-      &:checked + span::after {
+      &:checked + label::after {
         color: var(--fl-bgColor, $white);
         content: '\2713';
         display: inline-block;
@@ -73,6 +71,17 @@
     }
 
     // End of custom checkboxes
+  }
+
+  .apply-button {
+    background-color: var(--fl-fgColor, var(--indigo-500));
+    border-radius: rem(5);
+    color: var(--fl-bgColor, $white);
+    font-size: rem(16);
+    font-weight: var(--fl-medium);
+    line-height: rem(24);
+    margin-top: rem(16);
+    padding: rem(10) rem(14);
   }
 
   .resources-result {
