--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $grey-200: #c4c4c4;
 $grey-light: #e9e9e9;
 $indigo-100: #f8fbff;
 $indigo-200: #e2edfc;
-$indigo-500: #5a67d8;
+$indigo-500: #3544d0;
 $indigo-800: #3c366b;
 $indigo-900: #251f50;
 $blue-200: #e4f9ff;
