--- a/src/_includes/partials/components/filter-resources.njk
+++ b/src/_includes/partials/components/filter-resources.njk
@@ -9,7 +9,7 @@
         <ul>
             {% for topic in resourceTopics.resourceTopics %}
                 <li>
-                    <input class="filter-checkbox" type="checkbox" id="{{ topic.value }}" name="{{ 'to_' + topic.value }}">
+                    <input class="filter-checkbox" type="checkbox" data-filter="topics" id="{{ topic.value }}" name="{{ 'to_' + topic.value }}">
                     <label for="{{ topic.value }}">{{ topic.label }}</label>
                 </li>
             {% endfor %}
@@ -26,7 +26,7 @@
         <ul>
             {% for type in resourceTypes.resourceTypes %}
                 <li>
-                    <input class="filter-checkbox" type="checkbox" id="{{ type.value }}" name="{{ 'ty_' + type.value }}">
+                    <input class="filter-checkbox" type="checkbox" data-filter="types" id="{{ type.value }}" name="{{ 'ty_' + type.value }}">
                     <label for="{{ type.value }}">{{ type.label }}</label>
                 </li>
             {% endfor %}
